--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,90 +4,298 @@ $icon-font-path: '../fonts/';
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 // endbower
 
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+
+//- Fonts
+@font-face {
+    font-family: myfont;
+    src: url('../../fonts/Nickainley.ttf');
 }
 
-/* Space out content a bit */
+@font-face {
+    font-family: primerprint;
+    src: url('../../fonts/primerprint.ttf');
+}
+
+@font-face {
+    font-family: aracne;
+    src: url('../../fonts/aracne.ttf');
+}
+
+// - Colors
+$white: #ffffff;
+$blue: #00C9FF;
+$blueish: #2dd9e1;
+$green: #92FE9D;
+$charcoal: #323232;
+
+
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+    .wrap {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        // background: $charcoal;
+        .rainbow {
+            background-image: -webkit-gradient( linear, left top, right top, color-stop(0, $blue), color-stop(0.5, $blueish), color-stop(1, $green) );
+             background-image: gradient( linear, left top, right top, color-stop(0, $blue), color-stop(0.5, $blueish), color-stop(1, $green) );
+             color:transparent;
+             -webkit-background-clip: text;
+             background-clip: text;
+             //
+             font-size: 5em;
+             text-transform: uppercase;
+             -webkit-font-smoothing: antialiased;
+             font-family: aracne;
+        }
+
+        // SVG
+        #line-svg {
+            position: absolute;
+            width: 100%;
+            max-width: 100%;
+            margin-top: 5px;
+            .st0 {
+              stroke-dasharray: 1000;
+              animation:  dashTO 1s linear infinite;
+              stroke: red;
+            }
+        }
+        #Layer_1 {
+            position: absolute;
+            bottom: 3em;
+            path {
+              fill: none;
+              stroke-dasharray: 1000;
+              stroke-dashoffset: 1000;
+              animation: dashFROM 15s linear forwards;
+            }
+
+        }
+
+    }
+
+    .area-1 {
+        height: 100vh;
+        width: 100%;
+        display: flex;
+        &-left {
+            width: 50%;
+            height: 100%;
+        }
+        &-right {
+            width: 50%;
+            height: 100%;
+            background: $green;
+        }
+    }
+    .area-2 {
+        min-height: 100vh;
+        width: 100%;
+        background-image: -webkit-gradient( linear, left top, right top, color-stop(0, $blue), color-stop(0.5, $blueish), color-stop(1, $green) );
+        background-image: gradient( linear, left top, right top, color-stop(0, $blue), color-stop(0.5, $blueish), color-stop(1, $green) );
+        h1 {
+            margin: 0 auto;
+            text-align: center;
+            color: $white;
+            font-family: myfont;
+            font-size: 4em;
+            font-weight: 900;
+            padding: 2em 0 1.5em;
+        }
+        p {
+            text-align: center;
+            color: $white;
+            font-family: aracne;
+            text-transform: uppercase;
+            padding-top: 2em;
+        }
+        svg {
+            margin: 0 auto 2em;
+            width: 100px;
+            display: flex;
+        }
+        .st0 {
+            fill: none;
+            stroke-dasharray: 1000;
+            // stroke-dashoffset: 1000;
+            animation: dashFROM 10s linear forwards;
+        }
+    }
+    .area-3 {
+        min-height: 100vh;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        & > div {
+            height: 60vh;
+            width: 40%;
+            border-left: 5px solid $blue;
+            border-right: 5px solid $green;
+            box-sizing: border-box;
+            background-position: 0 0, 0 100% ;
+            background-repeat: no-repeat;
+            background-size: 100% 5px;
+            background-image: linear-gradient(to right, $blue 0%, $green 100%), linear-gradient(to right, $blue 0%, $green 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 1em 3em;
+            flex-direction: column;
+            text-align: center;
+            p {
+                font-family: aracne;
+            }
+            p.title {
+                font-size: 1em;
+                text-transform: uppercase;
+                font-weight: 900;
+                padding-bottom: 2em;
+            }
+            p.text {
+                font-family: aracne;
+                font-size: 1.2em;
+            }
+        }
+        &-left {
+            margin-right: -20px;
+            margin-top: 40px;
+            p.title {
+                margin-top: -40px;
+            }
+        }
+        &-right {
+            margin-left: -20px;
+        }
+    }
+
+    .area-4 {
+        width: 100%;
+        min-height: 100vh;
+        background-image: -webkit-gradient( linear, left top, right top, color-stop(0, $green), color-stop(0.5, $blueish), color-stop(1, $blue) );
+        background-image: gradient( linear, left top, right top, color-stop(0, $green), color-stop(0.5, $blueish), color-stop(1, $blue) );
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 3em;
+        position: relative;
+        svg#Layer_2 {
+            transform: rotate(180deg);
+            position: absolute;
+            top: 0;
+        }
+        svg#Layer_22 {
+            position: absolute;
+            bottom: 0;
+        }
+        .title {
+            margin: 0 auto;
+            text-align: center;
+            color: #ffffff;
+            font-family: myfont;
+            font-size: 4em;
+            font-weight: 900;
+            padding: 0 0 0.5em;
+        }
+        .group {
+            display: flex;
+            flex-direction: row;
+            .group-input {
+                padding-right: 30px;
+                display: flex;
+                flex-direction: column;
+            }
+        }
+        .group-input-textarea {
+            padding-right: 30px;
+            display: flex;
+            flex-direction: column;
+            margin-top: 20px;
+            textarea {
+                color: white;
+                min-height: 100px;
+            }
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            label {
+                color: white;
+                font-family: aracne;
+                font-size: 0.9em;
+            }
+            input, textarea {
+                background: transparent;
+                border: solid 1px #ffffff;
+                border-radius: 3px;
+                min-height: 35px;
+                margin-bottom: 20px;
+                min-height: 35px;
+                min-width: 250px;
+            }
+            input {
+                margin: 0 auto;
+                color: white;
+                font-weight: 100;
+            }
+        }
+    }
+
+    .footer {
+        position: relative;
+        svg {
+            z-index: 0;
+            position: absolute;
+            margin-top: -56px;
+        }
+        .footer-bottom {
+            background: $white;
+            width: 100%;
+            height: 300px;
+            margin-top: -10px;
+            z-index: 1;
+            position: absolute;
+            top: 20px;
+            color: $charcoal;
+            font-family: aracne;
+            .row {
+                display: flex;
+                .logo-section {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+                }
+                .social-icons {
+                    display: flex;
+                    flex-direction: column;
+                    text-align: center;
+                    img {
+                        max-width: 30px;
+                        align-self: center;
+                        margin-bottom: 10px;
+                    }
+                }
+            }
+            p {
+                margin: 0;
+                padding: 3em 0 1em;
+            }
+        }
+    }
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
+@keyframes dashTO {
+  to {
+    stroke-dashoffset: 1000;
   }
 }
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-  }
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-  p + h4 {
-    margin-top: 28px;
-  }
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
+@keyframes dashFROM {
+  to {
+    stroke-dashoffset: 0;
   }
 }
